e2e-tests/tests/snapshots/postgres__function_zxy_query_18_235085_122323.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: public.function_zxy_query
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3356,842)
    properties: (none)
  feature: 1
    id: (none)
    geometry: POINT(322,2749)
    properties: (none)
  feature: 2
    id: (none)
    geometry: POINT(3128,2547)
    properties: (none)
  feature: 3
    id: (none)
    geometry: POINT(3519,4080)
    properties: (none)
  feature: 4
    id: (none)
    geometry: POINT(2222,1246)
    properties: (none)
  feature: 5
    id: (none)
    geometry: POINT(2151,1929)
    properties: (none)
  feature: 6
    id: (none)
    geometry: POINT(1856,3728)
    properties: (none)
  feature: 7
    id: (none)
    geometry: POINT(513,2164)
    properties: (none)
  feature: 8
    id: (none)
    geometry: POINT(662,771)
    properties: (none)
  feature: 9
    id: (none)
    geometry: POINT(3569,26)
    properties: (none)
