e2e-tests/tests/snapshots/postgres__mars_points_1_1_0.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: mars_points
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3128,2152)
    properties:
      site = "Curiosity"
  feature: 1
    id: (none)
    geometry: POINT(1762,1628)
    properties:
      site = "Perseverance"
