e2e-tests/tests/snapshots/postgres__nztm2000quad_2_2_1.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: nz_points
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(13,3293)
    properties:
      city = "Auckland"
  feature: 1
    id: (none)
    geometry: POINT(0,4097)
    properties:
      city = "Wellington"
